--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,7 @@
 						"inlineStyleLanguage": "scss",
 						"assets": ["src/favicon.ico", "src/assets"],
 						"styles": [
+							"./node_modules/basscss/css/basscss.min.css",
 							"./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
 							"src/styles.scss"
 						],
@@ -102,8 +103,8 @@
 				}
 			}
 		}
-  },
-  "cli": {
-    "analytics": false
-  }
+	},
+	"cli": {
+		"analytics": false
+	}
 }
