--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "angular-oauth2-oidc": "^15.0.1",
+    "basscss": "^8.0.2",
     "js-image-zoom": "^0.7.0",
     "mouse-wheel-zoom": "^1.1.5",
     "ng-magnizoom": "^1.0.0",
